write some media queries

--- a/login.css
+++ b/login.css
@@ -299,3 +299,13 @@ button:hover{
     
 }
 
+@media only screen and (max-width: 800px) {
+    .color{
+        display: none;
+    }
+    .colors{
+        display: none;
+    }
+}
+
+
