--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body{
 }
 
 .tabContainer{
-    width: 70%;
-    margin-left: 15%;
+    width: 90%;
+    margin-left: 5%;
     margin-top: 21%;
     height: 250px;
     z-index: 1500;
@@ -83,7 +83,7 @@ body{
     padding: 10px;
     display: flex;
     justify-content: center;
-    margin-top: 15%;
+    margin-top: -200px;
     flex-direction: column;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
@@ -424,6 +424,7 @@ body{
     border-radius: 40px;
     width: 370px;
     height: 300px;
+    width: 99%;
 }
 .packageImg:hover{
     opacity: 0.6;
@@ -532,5 +533,174 @@ body{
 
 
 
+/* Style for screens smaller than 600px */
+
+  @media only screen and (max-width: 940px) {
+     
+    
+    .packageImg{
+        width: 99%;
+    }
+      
+    .offerPic{
+        width: 120px;
+        margin-left: 0px;
+        margin-top: 150px;
+    }
+  
+    .colors{
+        display: none;
+    }
+
+    .bg{
+        margin-top: -20px;
+    }
+
+    .tabContainer{
+        margin-top: 250px;
+        height: 100%;
+    }
+
+ 
+    .hotelForm   {
+      display: flex;
+      height: 500px;
+      flex-direction: column;
+      width: 100%;
+      
+      
+    }
+    .plainForm, .trainForm{
+        height: 600px;
+    }
+    
+    .hotelForm .input-box , .plainForm .input-box , .trainForm .input-box{
+        width: 90%;
+        margin-left: 2%;
+    }
+
+    .hotelForm .input-box{
+        margin-left: 5%;
+    }
+    .arrowBtn{
+        display: none;
+    }
+    
+    .input-box input{
+        width:90%;
+        
+    }
+  
+    .personLbl {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+
+    }
+  
+    .btn {
+      font-size: 14px;
+      
+    }
+    #minus{
+        margin-left: 10px;
+    }
+    #plus{
+        margin-right: 10px;
+    }
+  
+    .search {
+      font-size: 16px;
+      width: 90%;
+      height: 8%;
+      margin-left: 5%;
+      margin-top: 10%;
+      margin-bottom: 10%;
+      padding: auto;
+    }
+  }
 
 
+
+ @media only screen and (max-width: 600px) {
+          
+
+    .colors{
+        display: none;
+    }
+
+    .offerPic{
+        width: 80%;
+        margin-top: -20px;
+    
+    }
+
+    .bg{
+        margin-top: -30px;
+    }
+
+    .tabContainer{
+        margin-top: 250px;
+        height: 100%;
+    }
+
+
+    .hotelForm   {
+    display: flex;
+    height: 500px;
+    flex-direction: column;
+    width: 100%;
+    
+    
+    }
+    .plainForm, .trainForm{
+        height: 600px;
+    }
+    
+    .hotelForm .input-box , .plainForm .input-box , .trainForm .input-box{
+        width: 90%;
+        margin-left: 2%;
+    }
+
+    .hotelForm .input-box{
+        margin-left: 5%;
+    }
+    .arrowBtn{
+        display: none;
+    }
+    
+    .input-box input{
+        width:90%;
+        
+    }
+
+    .personLbl {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+
+    }
+
+    .btn {
+    font-size: 14px;
+    
+    }
+    #minus{
+        margin-left: 10px;
+    }
+    #plus{
+        margin-right: 10px;
+    }
+
+    .search {
+    font-size: 16px;
+    width: 90%;
+    height: 8%;
+    margin-left: 5%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+    padding: auto;
+    }
+}
