--- a/reserve.css
+++ b/reserve.css
@@ -11,6 +11,7 @@
 
 .container{
   display: flex;
+  
   justify-content: center;
   align-items: center;
   padding:25px;
@@ -103,5 +104,22 @@
 
 .inputBox img{
     cursor: pointer;
+}
+
+#pers2,#pers3{
+  display: none;
+}
+.minus-button,.plus-button{
+  border: none;
+  border-radius: 5px;
+  width: 22px;
+  padding: 5px;
+  background-color: #000000;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 500;
+  box-shadow: 0px 1px 1px 1px rgba(0,0,0,.2);
+  
 }
 
