--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body{
     position: absolute;
     width: 100%;
     height: 54%;
-    top: 11%;
+    top: 8%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
+    transition: 2.5s;
 }
 .container-fluid{
     margin-top: -8px;
@@ -25,7 +26,7 @@ body{
 .tabContainer{
     width: 70%;
     margin-left: 15%;
-    margin-top: 21%;
+    margin-top: 23%;
     height: 250px;
     z-index: 1500;
     border: none;
@@ -36,7 +37,7 @@ body{
     background:#fff;
     box-shadow: 0px 2px 6px 6px rgba(0,0,0,.3);
     opacity: 1;
-    border-radius: 10px;
+    border-radius: 30px;
     padding: 1px;
 }
 .tabContainer .buttonContainer button{
@@ -47,21 +48,21 @@ body{
     font-size: 18px;
     font-family: sans-serif;
     border: none;
-    border-radius: 10px;
+    border-radius: 30px;
     opacity: 0.8;
     color: #444;
+    transition: 1s;
+    
 }
-.tabContainer .buttonContainer button:hover{
-    transition: all .50s ease;
-}
+
 
 .tabContainer .tabPanel{
     z-index: 1500;
     height:80%;
-    background-color: #f5f5f5;
+    background-color: #fff;
     border: 1px solid darkgary;
-    border-radius:5px;
-    box-shadow: 0px 8px 8px 0px rgba(0,0,0,.5);
+    border-radius:30px;
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
     text-align: center;
     padding-top: 105px;
     box-sizing: border-box;
@@ -70,7 +71,6 @@ body{
     font-family: sans-serif;
     display: none;
     opacity: 1;
-
     border: none;
 }
 
@@ -115,21 +115,21 @@ body{
     position: relative;
     display: inline-block;
     width: 19%;
-    /* border-top: 2px solid gray;
-    border-bottom: 2px solid gray; */
     border-radius: 5px;
     margin-right: 5px;
     box-shadow: 1px 2px 2px 2px rgba(0,0,0,.3); 
    
 }
+#orgDes{
+    width: 12%;
+    margin-left: 20px;
+}
+
 .hotelForm .input-box{
     margin-top: 50px; 
     position: relative;
     display: inline-block;
     width: 23%;
-    
-    /* box-shadow: 0px 2px 6px 6px rgba(0,0,0,.2); */
-   
 }
 
 #number{
@@ -168,8 +168,6 @@ body{
     transform: translateY(-50%);
     transition: all .50s ease;
     color: #444;
-
-
 }
 .personNum{
     margin-left: 10%;
@@ -192,9 +190,9 @@ body{
 .arrowBtn{
    border: none;
    position: absolute;
-   margin-left: -20px;
+   margin-left: -3px;
    margin-top: 52px;
-   height: 36px;
+   height: 40px;
    font-size: 15px;
    border-radius: 5px;
    width: 22px;
@@ -246,24 +244,17 @@ body{
     font-size: 18px;
     padding: 5px;
     background:#000000;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
     border: none;
     outline: none;
     font-size: 22px;
     color:#fff;
-
+    transition: 0.8s;
     font-weight: 500;
-    transition: all .20s ease;
-    box-shadow: 0px 2px 6px 6px rgba(0,0,0,.2);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }
-.search:hover{
-    opacity: 0.7;
-    box-shadow: 0px 3px 9px 9px rgba(0,0,0,.2);
-    background-color: #444;
-    border-radius: 7px;
-   
-}
+
 .custom-num{
     color: #fff;
     width: 40px;
@@ -336,6 +327,7 @@ body{
     margin-top: 10px;  
     height:50px ;
     display:list-item;
+    transition: 0.5s;
     
 }
 .collapse{
@@ -363,17 +355,14 @@ body{
     color:#fff;
     padding:10px ;
     border-radius: 10px;
-    transition: 0.3s;
+    transition: 0.5s;
     border: 1px solid blueviolet;
     text-decoration: none;
 }
 
-#login:hover{
-    
+#login:hover{  
     border: 1px solid #fff;
     border-bottom: 1px solid blueviolet;
-
-    
 }
 .navbar-brand{
     color: #fff;
@@ -425,10 +414,7 @@ body{
     height: 300px;
     width: 99%;
 }
-.packageImg:hover{
-    opacity: 0.6;
-    scale: 0.99;
-}
+
 .fa-star{
     color: orange;
 }
@@ -464,15 +450,15 @@ body{
     border: none;
     border-radius: 5px;
     padding: 5px;
+    transition: 0.8s;
     width: 100%;
 }
 
-.book:hover{
-    opacity: 0.9;
-    box-shadow: 0px 3px 9px 9px rgba(0,0,0,.2);
-    background-color: #444;
-    border-radius: 7px;
-   
+
+
+.book:hover,.packageImg:hover,.search:hover{
+    opacity: 0.6;
+    scale: 0.99;
 }
 .resTable{
     display: block;
@@ -486,48 +472,79 @@ body{
     height: 50px;
     border-radius: 5px;
     border: none;
-    box-shadow:0px 6px 6px 0px rgba(0,0,0,.2) ;
-    transition: 0.5s;
+    transition: 0.8s;
     text-decoration: none;
     padding: 5px;
 }
 .resTable a:hover{
-    opacity: 0.7;
-    box-shadow: 0px 3px 9px 9px rgba(0,0,0,.2);
-    border-radius: 7px;
+    opacity: 0.6;
+    scale: 0.99;
 
 }
 #faq{
     margin-top: 150px;
     text-align: center;
     margin-bottom: 50px;
+    transition: 0.8s;
 }
 #faqText{
     margin-bottom: 30px;
+    transition: 0.8s;
 }
 
 .accordion-button:not(.collapsed) {
     background-color: #fff !important;
     color: #000000 !important;
+    transition: 0.8s !important;
 
  }
 .accordion-button:focus {
     box-shadow: none !important;
     outline: none !important;
+    transition: 0.8s !important;
     
 }
 .accordion-button{
     box-shadow: none !important;
     outline: none !important;
     color: #fff !important;
+    transition: 0.8s !important;
 }
 
 .accordion-body{
     height: 100% !important;
+    transition: 0.8s !important;
 }
 
 #basicAccordionCollapseTwo , #basicAccordionCollapseOne , #basicAccordionCollapseThree{
     height: 20% !important;
+    
+}
+
+.footer{
+    background: #152F4F;
+    margin-top: 150px;
+    color:white;
+
+    .about-company{
+      i{font-size: 25px;}
+      a{
+        color:white;
+        transition: color .2s;
+        &:hover{color:#4180CB}
+      }
+    } 
+    .location{
+      i{font-size: 18px;}
+    }
+    .copyright p{border-top:1px solid rgba(255,255,255,.1);} 
+  }
+
+
+.footer a{
+    text-decoration: none;
+    color: #fff;
+
 }
 
 
@@ -549,13 +566,12 @@ body{
       font-size: 14px;
       
     }
-  
+
     
 }
 
-@media only screen and (max-width: 940px) {
+@media only screen and (max-width: 990px) {
      
-    
     .packageImg{
         width: 99%;
     }
@@ -570,15 +586,15 @@ body{
         display: none;
     }
 
-    .bg{
-        margin-top: -20px;
-    }
 
     .tabContainer{
         margin-top: 250px;
         height: 100%;
     }
 
+    .bg{
+        margin-top: -20px;
+    }
  
     .hotelForm   {
       display: flex;
@@ -637,14 +653,37 @@ body{
       margin-bottom: 10%;
       padding: auto;
     }
+
+    #orgDes{
+        width: 90%;
+    }
+    .about-company{
+        display: none;
+    }
+
+
+
   }
 
 
 
  @media only screen and (max-width: 600px) {
-          
 
 
+    .navbar-collapse{
+        width: 100%;
+        height: 100%;
+    }
+
+    .navbar{
+        width: 100%;
+        height: 100%;
+    }
+    
+    #login{
+        display: none;
+    }
+ 
 
 
     .colors{
@@ -657,9 +696,7 @@ body{
     
     }
 
-    .bg{
-        margin-top: -30px;
-    }
+  
 
     .tabContainer{
         margin-top: 250px;
@@ -723,6 +760,13 @@ body{
     margin-top: 15%;
     margin-bottom: 10%;
     padding: auto;
+    }
+
+    #orgDes{
+        width: 90%;
+    }
+    .about-company{
+        display: none;
     }
 
 }
