--- a/login.css
+++ b/login.css
@@ -323,4 +323,10 @@ button:hover{
     width: 100%;
     position: absolute;
 }
+.close{
+    font-size: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+}
 
