--- a/style/style.css
+++ b/style/style.css
@@ -459,7 +459,6 @@ body{
     font-size: 15px;
     font-weight: 500;
     background-color: #000000;
-    color: #fff;
     border: none;
     border-radius: 5px;
     padding: 5px;
@@ -467,7 +466,10 @@ body{
     width: 100%;
 }
 
-
+.book a{
+    text-decoration: none;
+    color: #fff;
+}
 
 .book:hover,.packageImg:hover,.search:hover{
     opacity: 0.6;
