--- a/style/style.css
+++ b/style/style.css
@@ -74,22 +74,37 @@ body{
     border: none;
 }
 
-
-
-.colors {
+.colors-arrow {
     position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #f5f5f5;
+    padding: 10px;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, .2);
+    cursor: pointer;
+  }
+
+  .colors-arrow i {
+    color: #000000;
+  }
+
+  .colors {
+    position: absolute;
+    margin-top: -30px;
     right: 0;
     background: #f5f5f5;
     padding: 10px;
-    display: flex;
-    justify-content: center;
-    margin-top: -200px;
+    display: none;
     flex-direction: column;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
-    box-shadow: 0px 1px 3px 3px rgba(0,0,0,.2);
-}
-.colors .color{
+    box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, .2);
+  }
+
+  .colors .color {
     position: relative;
     width: 20px;
     height: 20px;
@@ -97,10 +112,8 @@ body{
     margin: 10px;
     border-radius: 50%;
     cursor: pointer;
-    box-shadow: 0px 1px 3px 3px rgba(0,0,0,.2);
-}
-
-
+    box-shadow: 0px 1px 3px 3px rgba(0, 0, 0, .2);
+  }
     
  .hotelForm,.plainForm,.trainForm{
 
